--- a/verkkokauppa-1/pyproject.toml
+++ b/verkkokauppa-1/pyproject.toml
@@ -8,6 +8,8 @@ authors = ["Kalle Ilves <kalle.ilves@helsinki.fi>"]
 python = "^3.6"
 
 [tool.poetry.dev-dependencies]
+coverage = "^5.4"
+pytest = "^6.2.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
